--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1095,6 +1095,7 @@ code[class*='language-'] {
     transform: translate(100%, 0);
     transition: transform 1s cubic-bezier(0.32, -0.01, 0, 0.99);
     width: 100%;
+    z-index: 10;
   }
   .t-palette-color--1 .c-header__list {
     background-color: var(--co_palette-1--lighten);
@@ -1241,6 +1242,7 @@ code[class*='language-'] {
   right: 10px;
   top: 10px;
   width: 45px;
+  z-index: 11;
 }
 
 @media (min-width: 64em) {
@@ -1258,6 +1260,7 @@ code[class*='language-'] {
   top: 30px;
   transition: background 1s;
   width: 30px;
+  z-index: 11;
 }
 
 .c-header__toggle:checked ~ .c-header__hamburger {
