--- a/src/scss/06-components/_header.scss
+++ b/src/scss/06-components/_header.scss
@@ -6,6 +6,7 @@ $co_header-hamburger: $co_color-light;
 $an_header-mobile-animation: cubic-bezier(0.32, -0.01, 0, 0.99);
 
 $sp_header-z-index-m: 10;
+$sp_header-hamburger-z-index-m: $sp_header-z-index-m + 1;
 
 .c-header {
   .is-menu-open & {
@@ -42,7 +43,7 @@ $sp_header-z-index-m: 10;
     transform: translate(100%, 0);
     transition: transform 1s $an_header-mobile-animation;
     width: 100%;
-    // z-index: 1; // just to be sure it goes on top of the header
+    z-index: $sp_header-z-index-m;
 
     @for $i from 1 through 5 {
       .t-palette-color--#{$i} & {
@@ -145,13 +146,7 @@ $sp_header-z-index-m: 10;
   right: 10px;
   top: 10px;
   width: 45px;
-  // z-index: 2;
-
-  // @include mq($until: desktop) {
-  //   &:checked {
-  //     z-index: 2; // TODO: check z-indexes!
-  //   }
-  // }
+  z-index: $sp_header-hamburger-z-index-m;
 
   @include mq(desktop) {
     display: none;
@@ -167,12 +162,11 @@ $sp_header-z-index-m: 10;
   top: 30px;
   transition: background 1s;
   width: 30px;
-  // z-index: 1;
+  z-index: $sp_header-hamburger-z-index-m;
 
   .c-header__toggle:checked ~ & {
     background: transparent;
     transition: background 1s;
-    // z-index: 2; // TODO: check z-indexes!
   }
 
   &::before {
